# alphathink

./: .gitattributes  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
alpha_evolve/: __init__.py  agent.py  cli.py  eval.py  memory.py  retrieval.py  verifier.py
data/: eval.jsonl
data/corpus/: agent_phases.txt  alpha_evolve.txt  alpha_evolve_faq.txt  alpha_evolve_phases_faq.txt  anti_hallucination_faq.txt  anti_hallucination_principles.txt  evidence_coverage.txt
docs/: ARCHITECTURE.md  RESULTS.md
quickcapture/: __init__.py  __main__.py  cli.py  db.py  main.py  models.py  services.py
scripts/: reproduce.ps1
tests/: test_alpha_evolve.py  test_cli.py  test_eval_safety.py  test_repo_metadata.py  test_services.py
